[gd_scene load_steps=4 format=3 uid="uid://dbuxu6koagnsa"]

[ext_resource type="Script" path="res://cs/主场景/ui/CardTypeProgressBar.gd" id="1_n3abi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t60sk"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u8k2e"]
bg_color = Color(0.2, 0.7, 0.3, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="CardTypeProgressBar" type="Control"]
custom_minimum_size = Vector2(280, 60)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_n3abi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t60sk")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = 28.0
grow_horizontal = 2
text = "顺子"
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = 28.0
grow_horizontal = 0
text = "Lv.1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -26.0
offset_right = -10.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_t60sk")
theme_override_styles/fill = SubResource("StyleBoxFlat_u8k2e")
value = 50.0
show_percentage = false

[node name="XPLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -26.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "50 / 100"
horizontal_alignment = 1
vertical_alignment = 1 